[FIX] video gap +5px

--- a/src/Components/FoodVideos/FoodVideos.css
+++ b/src/Components/FoodVideos/FoodVideos.css
@@ -4,7 +4,7 @@
   display: grid;
 
   grid-template-columns: 1fr;
-  gap: 20px; /* 아이템 간격 */
+  gap: 25px; /* 아이템 간격 */
   padding: 15px; /* 패딩 */
   max-width: 400px;
   margin: 0 auto;
@@ -13,7 +13,6 @@
 .search-food{
   margin-top: 80px;
     padding: 15px;
-    
     color:black;
     /* border-radius: 30px; */
     /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
